--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/btnFillCrop"
         android:layout_marginStart="9dp"
-        android:text="MediaAndroid" />
+        android:layout_marginEnd="9dp"
+        android:text="Android" />
 
     <Button
         android:id="@+id/btnMediaFFmpeg"
@@ -31,7 +32,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="9dp"
         android:layout_marginEnd="9dp"
-        android:text="MediaFFmpeg" />
+        android:text="FFmpeg" />
 
     <Button
         android:id="@+id/btnFillParent"
@@ -63,7 +64,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/btnAdapter"
         android:layout_marginStart="9dp"
-        android:layout_marginEnd="9dp"
         android:text="ORIGINAL" />
 
     <Button
