--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,5 +77,14 @@
         android:layout_marginEnd="9dp"
         android:text="ADAPTER" />
 
+    <Button
+        android:id="@+id/btnRecycler"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/btnOriginal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btnAdapter"
+        android:layout_marginStart="9dp"
+        android:text="Recycler" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
